--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Codigo, Descuento, Airbnb, Viaje, Hospedaje, Reserva">
     <meta name="author" content="L.M.G.F.">
-    <meta name="description" content="Cupon Airbnb Gratis"
-    <title>Cupon de Descuento AIRBNB</title>
+    <meta name="description" content="Cupon Airbnb Gratis">
     <style media="screen">
       body {
         background-image: url('puente.jpg');
